--- a/index.html
+++ b/index.html
@@ -62,7 +62,17 @@
   .b2 { left: 30%; background-color: #ffcc00; animation-delay: 2s; }
   .b3 { left: 50%; background-color: #66ccff; animation-delay: 4s; }
   .b4 { left: 70%; background-color: #99ff99; animation-delay: 1s; }
-  .b5 { left: 90%; background-color: #ff9966; animation-delay: 3s; }
+  .b6 { left: 90%; background-color: #ff9966; animation-delay: 3s; }
+  .b7 { left: 60%; background-color: #fb5705; animation-delay: 2s; }
+  .b8 { left: 40%; background-color: #e50404; animation-delay: 1s; }
+  .b9 { left: 80%; background-color: #f40982; animation-delay: 4s; }
+  .b10 { left: 20%; background-color: #6ba336; animation-delay: 11s; }
+  .b11 { left: 90%; background-color: #f2d309; animation-delay: 8s; }
+  .b12 { left: 60%; background-color: #0950f6; animation-delay: 2s; }
+  .b13 { left: 50%; background-color: #f10707; animation-delay: 6s; }
+  .b14 { left: 70%; background-color: #f20894; animation-delay: 0s; }
+  .b15 { left: 40%; background-color: #ef580c; animation-delay: 10s; }
+
 
   /* Cake */
   .cake {
